--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --hot --env development",
-    "build": "webpack --env production"
+    "build": "set NODE_ENV=production&webpack"
   },
   "repository": {
     "type": "git",
